# Deep_Object_Pose

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.sage  README.md  docker-entrypoint.sh  ecr_test.py  license.md  package.xml  readme.md  requirements.txt  setup.cfg  setup.py  walkthrough.md
CoRL/: inference.py  readme.md  requirements.txt  train.py
common/: cuboid_pnp_solver.py  debug.py  detector.py  models.py  utils.py
config/: blenderproc_camera_info_example.yaml  camera_info.yaml  config_dope.yaml  config_pose.yaml
data_generation/: readme.md  validate_data.py
data_generation/backgrounds/: README.md
data_generation/blenderproc_data_gen/: README.md  generate_training_data.py  run_blenderproc_datagen.py
data_generation/dome_hdri_haven/: download.md
data_generation/nvisii_data_gen/: debug_json_ros_node.py  generate_dataset.py  readme.md  requirements.txt  single_video_pybullet.py  utils.py
data_generation/nvisii_data_gen/output/output_example/: 00000.seg.exr
doc/: camera_tutorial.md
docker/: Dockerfile  Dockerfile.kinetic  Dockerfile.noetic  Dokerfile.humble  README.md  ecr_push.sh  init_workspace.sh  readme.md  run_docker.sh  run_dope_docker.sh
dope_ros2/: dope_node.py
evaluate/: add_compute.py  evaluate.py  kpd_compute.py  make_graphs.py  readme.md  utils_eval.py
inference/: README.md  inference.py
inference_script/: cuboid.py  cuboid_pnp_solver.py  detector.py  detector_debug.py
launch/: dope.launch.py
meshes/lime/: Lime.obj.mtl  model_info.json
nodes/: camera  dope
ros1/: README.md
ros1/docker/: Dockerfile.noetic  init_workspace.sh  readme.md  run_dope_docker.sh
ros1/dope/: CMakeLists.txt
ros1/dope/config/: config_pose.yaml
ros1/dope/launch/: camera.launch  dope.launch
ros1/dope/nodes/: dope
ros1/dope/weights/: README.md
ros2/: README.md
rviz/: rviz.rviz
sagemaker_docker/: Dockerfile  ecr_push.sh  run_dope_docker.sh  train.py
sample_data/: 000001.json  000030.json
scripts/: .gitignore  README.md  hyperparameters.json  local_train.py  readme.md  train meat.py  train.py  train_fat.py
scripts/blenderproc_data_gen/: generate_training_data.py
scripts/metrics/: .gitignore  add_compute.py  download_content.sh  kpd_compute.py  make_graphs.py  readme.md  readme_add_metrics.md  render_bop.py  render_json.py
scripts/nvisii_data_gen/: debug_json_ros_node.py  download_google_scanned_objects.py  generate_dataset.py  readme.md  requirements.txt  requirements2.txt  single_video_pybullet.py  utils.py
scripts/nvisii_data_gen/models/listerine/: listerine.mtl
scripts/nvisii_data_gen/output/output_example/: 00000.depth.exr  00000.json  00001.depth.exr  00001.json  00001.seg.exr
scripts/train2/: draw.py  generate_train.py  inference.py  models.py  notes_to_run.txt  readme.md  requirements.txt  requirements1.txt  run_commands_06_28.txt  run_commands_07_07.txt  run_commands_07_10.txt  train.py  utils_dope.py
scripts/train2/ADD_scripts/: LICENSE.md  make_graphs.py  notes.txt  run_add.py
scripts/train2/config_inference/: camera_info.yaml  camera_info_500x500.yaml  camera_info_512x512.yaml  camera_info_512x512_v2.yaml  config_pose.yaml  config_pose_512x512.yaml  config_pose_80k.yaml
scripts/train2/inference/: cuboid.py  cuboid_pnp_solver.py  detector.py
src/: camera.py  dope.py
src/dope/: utils.py
src/dope/inference/: cuboid.py  cuboid_pnp_solver.py  detector.py  live_realsense_webcam.py  video_detect.py
src/dope/inference/cfg/: my_config_realsense.yaml
src/inference/: cuboid_pnp_solver.py  detector.py
src/training/: train.py
train/: .gitignore  README.md  requirements.txt  run_pipeline_on_ngc.py  train.py  train_ddp.py  utils.py
train/docker/: Dockerfile  get_nvidia_libs.sh
train/evaluate/: README.md  evaluate.py
train/inference/: README.md  cuboid.py  inference.py
train/inference/config/: camera_info.yaml  camera_info_960x540.yaml  config_pose.yaml
train/misc/: test_projection.py
train/sample_data/: 000000.json  000031.json
train2/: inference.py  train.py  utils_dope.py
train2/config_inference/: config_pose.yaml
weights/: .gitignore  readme.md
(+631 files in other folders)
