<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dope_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sfederico@todo.todo">sfederico</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  
  <build_depend>ament_cmake</build_depend>
  <exec_depend>rclpy_components</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <build_depend>geometry_msgs</build_depend>  
  <build_depend>sensor_msgs</build_depend>  
  <build_depend>std_msgs_msgs</build_depend>  
  <build_depend>vision_msgs_msgs</build_depend>  
  <build_depend>visualization_msgs</build_depend>  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>uclv_utilities</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
